Testing for Sections

--- a/Views/Views/Shared/_Layout.cshtml
+++ b/Views/Views/Shared/_Layout.cshtml
@@ -18,7 +18,14 @@
         This is part of the layout
     </div>
 
-    @RenderSection("Footer")
+    @if (IsSectionDefined("Footer"))
+    {
+        @RenderSection("Footer")
+    }
+    else
+    {
+        <h4>This is the default footer</h4>
+    }
 
     <div class="bg-info">
         This is part of the layout
