Using Optional Sections

--- a/Views/Views/Shared/_Layout.cshtml
+++ b/Views/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
     {
         <h4>This is the default footer</h4>
     }
+    
+    @RenderSection("scripts", false)
 
     <div class="bg-info">
         This is part of the layout
