--- a/Views/Views/Home/List.cshtml
+++ b/Views/Views/Home/List.cshtml
@@ -9,6 +9,6 @@
 </head>
 <body class="m-1 p-1">
     This is the List View
-    @Html.Partial("MyPartial")
+    @Html.Partial("MyStronglyTypedPartial", new [] {"Apple", "Orange", "Pear"})
 </body>
 </html>
