--- a/Views/Views/Home/List.cshtml
+++ b/Views/Views/Home/List.cshtml
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width" />
     <title>Razor</title>
     <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
+    <script id="jsonData" type="application/json">
+        @Json.Serialize(new[] {"Apple", "Orange", "Pear"})
+    </script>
+    <script asp-src-include="lib/jquery/dist/*.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var list = $("#list");
+            JSON.parse($("#jsonData").text()).forEach(function(val) {
+                console.log("Val: " + val);
+                list.append($("<li>").text(val));
+            });
+        });
+    </script>
 </head>
 <body class="m-1 p-1">
     This is the List View
-    @Html.Partial("MyStronglyTypedPartial", new [] {"Apple", "Orange", "Pear"})
+    <ul id="list"></ul>
 </body>
 </html>
